feat: 知识库RAG配置